WexGit/Wex_DX/force-app/main/default/objects/Wex_UK_Configurable__c/fields/Account_Dates__c.field-meta.xml
<CustomField>
    <fullName>Account_Dates__c</fullName>
    <description>In days First Trans Date  Invoice Date Account Creation</description>
    <label>Account Dates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>