WexGit/Wex_DX/force-app/main/default/objects/Wex_UK_Configurable__c/fields/Confidence_Threshold_DNB__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Threshold_DNB__c</fullName>
    <label>Confidence Threshold DNB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>