WexGit/Wex_DX/force-app/main/default/objects/Wex_UK_Configurable__c/fields/Credit_Limit_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Threshold__c</fullName>
    <label>Credit Limit Threshold (Euros)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>