WexGit/Wex_DX/force-app/main/default/objects/Wex_UK_Configurable__c/fields/Credit_Util_threshold__c.field-meta.xml
<CustomField>
    <fullName>Credit_Util_threshold__c</fullName>
    <label>Credit Utilisation Threshold (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>