WexGit/Wex_DX/force-app/main/default/objects/Wex_UK_Configurable__c/fields/Expiry_date_lower__c.field-meta.xml
<CustomField>
    <fullName>Expiry_date_lower__c</fullName>
    <description>creditAssRiskGrade &lt;= 3</description>
    <label>Expiry Date Lower (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>