WexGit/Wex_DX/force-app/main/default/objects/Wex_UK_Configurable__c/fields/Expiry_Date_upper__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_upper__c</fullName>
    <description>creditAssRiskGrade &gt; 3</description>
    <label>Expiry Date Upper (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>