WexGit/Wex_DX/force-app/main/default/objects/Wex_UK_Configurable__c/fields/High_Cred_Util_limit__c.field-meta.xml
<CustomField>
    <fullName>High_Cred_Util_limit__c</fullName>
    <label>High Cred Utilisation Limit (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>