WexGit/Wex_DX/force-app/main/default/objects/Wex_UK_Configurable__c/fields/HLA_Threshold__c.field-meta.xml
<CustomField>
    <fullName>HLA_Threshold__c</fullName>
    <label>HLA Threshold (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>