WexGit/Wex_DX/force-app/main/default/objects/Wex_UK_Configurable__c/fields/Nird_Review__c.field-meta.xml
<CustomField>
    <fullName>Nird_Review__c</fullName>
    <description>The number of days until expiration.</description>
    <label>Nird Review (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>