WexGit/Wex_DX/force-app/main/default/objects/Wex_UK_Configurable__c/fields/Overall_Cred_Lmt_threshold__c.field-meta.xml
<CustomField>
    <fullName>Overall_Cred_Lmt_threshold__c</fullName>
    <label>Overall Credit Limit Threshold (Euros)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>