WexGit/Wex_DX/force-app/main/default/objects/Wex_UK_Configurable__c/fields/Pre_HLA_Lower__c.field-meta.xml
<CustomField>
    <fullName>Pre_HLA_Lower__c</fullName>
    <label>Pre HLA Lower (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>